Finished HTML now needs style

--- a/index.html
+++ b/index.html
@@ -2,25 +2,36 @@
 <html>
 
 <head><title>Smoke Weed Everyday</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="D:\Sites\the_odin_project\google-homepage\style.css">
 </head>
 
 <body>
 
-  <header>
+<div id="Header">
   <a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#safe=off&q=smoke%20weed%20everyday">
     <img src="D:\Sites\the_odin_project\google-homepage\images\Header.png"></a>
-  </header>
-
-<div>
-  <div>
-    <a href="https://www.google.com/webhp?hl=en&ictx=2&sa=X&ved=0ahUKEwi3kfCRwZXQAhVSzmMKHXc2BKYQPQgD#safe=off&hl=en&q=yahoo.com">
-      <img src="D:\Sites\the_odin_project\google-homepage\images\nav_logo242.png"></a>
-  </div>
-google search form
 </div>
 
-<div>google buttons</div>
+<div class="Content">
+  <div id="logo">
+    <a href="https://www.google.com/#safe=off&q=marijuana+is+good+for+you">
+      <img src="D:\Sites\the_odin_project\google-homepage\images\nav_logo242.png"></a>
+  </div>
+<form role="search" method="get" id="searchform" class="searchform" action="http://www.google.co.uk/search?hl=en-GB&source=hp&q=">
+  <div id="gform">
+  		  					<label class="screen-reader-text" for="s"></label>
+  		  					<input type="text" value="" name="q" id="s">
+  </div>
+</div>
+
+<div id="buttons">
+  <input type="submit" class="btn fa-input" value="Google Search" >
+  <a href="https://www.youtube.com/watch?v=QZXc39hT8t4">
+     <input type="button" value="I'm Feeling Woozy" />
+  </a>
+</div>
+
+<div id="footer">footer</div>
 
 </body>
 
