Added CSS made it look super ballerific mah dude

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
   </a>
 </div>
 
-<div id="footer">footer</div>
+<div class="footer">
+  <div id="Advertising">
+    <a href="https://twitter.com/NotPatMorita">Advertising</a>
+  </div>
+</div>
 
 </body>
 
