attached hosted elements

--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html>
 
 <head><title>Smoke Weed Everyday</title>
-<link rel="stylesheet" type="text/css" href="https://github.com/miztermiyagi/google-homepage/blob/master/style.css">
+<link rel="stylesheet" type="text/css" href="https://miztermiyagi.github.io/google-homepage/style.css">
 </head>
 
 <body>
 
 <div id="Header">
   <a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#safe=off&q=smoke%20weed%20everyday">
-    <img src="https://github.com/miztermiyagi/google-homepage/blob/master/images/Header.png"></a>
+    <img src="https://raw.githubusercontent.com/miztermiyagi/google-homepage/master/images/Header.png"></a>
 </div>
 
 <div class="Content">
   <div id="logo">
     <a href="https://www.google.com/#safe=off&q=marijuana+is+good+for+you">
-      <img src="https://github.com/miztermiyagi/google-homepage/blob/master/images/nav_logo242.png"></a>
+      <img src="https://raw.githubusercontent.com/miztermiyagi/google-homepage/master/images/nav_logo242.png"></a>
   </div>
 <form role="search" method="get" id="searchform" class="searchform" action="http://www.google.co.uk/search?hl=en-GB&source=hp&q=">
   <div id="gform">
